--- a/index.html
+++ b/index.html
@@ -1,114 +1,12 @@
 <!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مؤتمر كامبل بنرمان</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            direction: rtl;
-            margin: 6px; /* تقليل المسافة */
-            padding: 6px;
-            background-color: #eef;
-        }
-        h1 {
-            text-align: center;
-            color: #2c3e50; /* الأزرق القاتم */
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #2980b9; /* لون أزرق جديد */
-            margin-top: 20px;
-            padding-bottom: 5px;
-        }
-        h3 {
-            text-align: center;
-            color: #1f3a6d; /* الأزرق القاتم */
-            margin-top: 30px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        p {
-            line-height: 1.6;
-            color: #34495e; /* لون رمادي */
-            margin: 10px 0;
-        }
-        .red {
-            color: #c0392b; /* اللون الأحمر */
-            font-weight: bold; /* جعل الخط عريض */
-        }
-        .info-box {
-            border: 2px solid #1f3a6d;
-            border-radius: 8px;
-            background-color: #ecf0f1;
-            padding: 15px;
-            margin-bottom: 20px;
-            color: #2c3e50;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-        .bullet {
-            font-size: 24px; /* حجم أكبر للنقطة */
-            color: #000; /* اللون الأسود */
-            margin-left: 10px; /* مسافة بين النقطة والنص */
-            vertical-align: middle; /* محاذاة عمودية */
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="info-box">
-            <h1>تكليف مادة الصراع</h1>
-            <div class="author">
-                حمدي عبدالفتاح عبدالله سعيد / طب بشري دفعة 42
-            </div>
-        </div>
-
-        <h3>مؤتمر كامبل بنرمان</h3>
-        
-        <p>
-            مؤتمر كامبل بنرمان، هو تسمية للمؤتمر الاستعماري الذي انعقد في لندن سنة 1907 بهدف إيجاد آلية تحافظ على تفوق ومكاسب الدول الاستعمارية. وقد ضم الدول الاستعمارية في ذاك الوقت: بريطانيا، فرنسا، هولندا، بلجيكا، إسبانيا، إيطاليا. وتُّنص على أن المؤتمرين خرجوا في النهاية بوثيقة سرية سموها "وثيقة كامبل" نسبة إلى رئيس الوزراء البريطاني آنذاك هنري كامبل بانرمان.
-        </p>
-        <p>
-            وقال بعض الكتاب والمفكرين: أنه "أخطر مؤتمر حصل لتدمير الأمة العربية خاصة والإسلامية عامة، وكان هدفه إسقاط النهضة وعدم استقرار المنطقة من خلال زرع كيان صهيوني يراقب الأمة العربية والإسلامية وهو بمثابة السرطان للوطن العربي بشكل عام وفلسطين بشكل خاص". بينما يعارض البعض وجود هذه الوثيقة مثل الدكتور أنيس صايغ وخبير الدراسات الاستراتيجية محسن صالح والمؤرخ محمد م. الأرناؤوط وغيرهم بقولهم: أنه لا يوجد دليل علمي وحسي على وجود مثل هكذا وثيقة حتى الآن، وأن وثيقة كامبل بنرمان لا يصلح الاستشهاد بها علمياً ولا إعلامياً إلى أن توجد أدلة قاطعة عليها، وما يترتب على استخدامها من أضرار تمس المصداقية والموضوعية، وتفتح المجال للطعن والاستهزاء والإساءة والإضرار بجوانب القوة الأخرى التي يملكها الباحثون المؤيدون لقضية السكان الأصليين الفلسطينيين؛ وهي أضرار أكبر بكثير من النفع التعبوي والإعلامي الشعبوي الذي قد يسعى إليه البعض. بينما يعارض البعض هذا الأمر ويقولون أن الوثيقة حقيقية ومثبتة تماماً وأنه انعقد مؤتمر عام 1907م بين الدول الاستعمارية واتفقوا على أن يقسموا الوطن العربي ويجعلوهم متفككين ومتناحرين حسب تعبيرهم.
-        </p>
-
-        <h2>أهداف المؤتمر</h2>
-        <p><span class="bullet">•</span> <span class="red">تعزيز السيطرة الاستعمارية:</span> وضع استراتيجيات للحفاظ على السيطرة على المستعمرات ومنع أي تحركات مناهضة للاستعمار.</p>
-        <p><span class="bullet">•</span> <span class="red">تقسيم الدول العربية:</span> العمل على تفكيك الوحدة العربية وتعزيز الانقسامات الطائفية والعرقية.</p>
-        <p><span class="bullet">•</span> <span class="red">زرع الكيان الصهيوني:</span> دعم فكرة إنشاء دولة يهودية في فلسطين كوسيلة لضمان عدم اتحاد الدول العربية.</p>
-<br /> <br /> <br />
-        <h2>نتائج الوثيقة</h2>
-        <p>
-            بعد مناقشات ومدارسات عميقة ومطولة خرج المؤتمرون بعدة توصيات من هذا المؤتمر من أهمها: إبقاء الشعوب العربية مفككة وجاهلة ومتناحرة، من خلال حرمانها من الدعم ومن اكتساب العلوم والمعارف التقنية، وعدم دعمها في هذا المجال، ومحاربة أي اتجاه من هذه الدول المتجهة نحو العلوم التقنية.
-        </p>
-        <p>
-            دعا المؤتمر إلى إقامة دولة في فلسطين تكون بمثابة حاجز بشري قوي وغريب ومعاد، يفصل الجزء الإفريقي من هذه المنطقة عن الجزء الآسيوي، ويحول دون تحقيق وحدة هذه الشعوب وهذه الدولة هي "إسرائيل". وتم اعتماد النص النهائي من لجنة الاستعمار وجاء فيه: "على الدول ذات المصلحة أن تعمل على استمرار تأخر المنطقة، وتجزيئها وإبقاء شعوبها مضللة جاهلة متناحرة، وعليهم محاربة اتحاد هذه الشعوب وارتباطها بأي نوع من أنواع الارتباط الفكري أو الروحي أو التاريخي، وإيجاد الوسائل العملية القوية لفصلها عن بعضها البعض. وكوسيلة أساسية مستعجلة لدرء الخطر، توصي اللجنة بضرورة العمل على فصل الجزء الإفريقي من هذه المنطقة عن جزئها الآسيوي، وتقترح لذلك إقامة حاجز بشري قوي وغريب "دولة إسرائيل" بحيث يشكل في هذه المنطقة، وعلى مقربة من قناة السويس، قوة صديقة للاستعمار عدوة لسكان المنطقة".
-        </p>
-
-        <h2>تصنيفهم للعالم</h2>
-        <p>
-            ظلت الاجتماعات تتواصل حتى خرجت عام 1907 بوثيقة أسندتها على تصنيف العالم إلى 3 أصناف:
-        </p>
-        <p><span class="bullet">•</span> <span class="red">الصنف الأول:</span> العالم المسيحي والذي يضم الدول الغربية الاستعمارية مع الولايات المتحدة ودول شمال أمريكا وأستراليا.</p>
-        <p><span class="bullet">•</span> <span class="red">الصنف الثاني:</span> الدول التي ينبغي احتواؤها كاليابان وكوريا.</p>
-        <p><span class="bullet">•</span> <span class="red">الصنف الثالث:</span> الدول العربية، التي تتميز بتواجدها على رقعة استراتيجية تتمتع بالمواد الخام التي يمكن الاستفادة القصوى منها، ويربطها ببعضها دين واحد ولغة واحدة، هذه الدول التي يجب أن تبقى متخلفة ومفككة ومحتاجة إلى العالم المسيحي بشكل دائم، لضمان أقصى انتفاع الدول الاستعمارية من ثرواتها، ولضمان عدم اتحادها فيما بينها وقيامها تحت قيادة واحدة.</p>
-
-        <h2>التأملات النهائية</h2>
-        <p>
-            إن فهم مؤتمر كامبل بنرمان وأهدافه يساعد في إدراك كيفية تشكيل الأحداث السياسية والاجتماعية الحالية. لقد كانت نتائجه بمثابة نذير شؤم للعديد من الدول العربية، وما زالت آثارها محسوسة حتى اليوم، حيث لا تزال المنطقة تعاني من الانقسامات والصراعات التي كانت جزءًا من استراتيجيات القوى الاستعمارية.
-        </p>
-    </div>
-</body>
+    <title></title>
+    meta
+  </head>
+  <body>
+    body
+  </body>
 </html>
