--- a/index.html
+++ b/index.html
@@ -1,12 +1,177 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    meta
-  </head>
-  <body>
-    body
-  </body>
+    <title>موقع تخزين سحابي</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            color: #007bff;
+        }
+        .upload-container {
+            max-width: 600px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        }
+        .custom-file-upload {
+            display: inline-block;
+            padding: 12px 20px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+            text-align: center;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            margin-bottom: 20px;
+        }
+        .custom-file-upload:hover {
+            background-color: #0056b3;
+        }
+        input[type="file"] {
+            display: none; /* إخفاء المدخل الأصلي */
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        .file-list {
+            margin-top: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 15px;
+        }
+        .file-item {
+            background-color: #e9ecef;
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 14px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            transition: transform 0.2s;
+        }
+        .file-item:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .download-icon {
+            cursor: pointer;
+            width: 30px;
+            height: 30px;
+            background-color: #007bff;
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.3s;
+        }
+        .download-icon:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="upload-container">
+        <h1>رفع ملف إلى التخزين السحابي</h1>
+        <form id="uploadForm" action="upload.php" method="POST" enctype="multipart/form-data">
+            <label class="custom-file-upload">
+                اختر ملفات
+                <input type="file" id="fileInput" name="files[]" multiple>
+            </label>
+            <button type="submit">رفع الملفات</button>
+        </form>
+        <div id="message"></div>
+        <div class="file-list" id="fileList"></div>
+    </div>
+
+    <script>
+        const fileList = [];
+
+        document.getElementById('uploadForm').onsubmit = function(event) {
+            event.preventDefault(); // منع الإرسال الافتراضي للنموذج
+            uploadFiles();
+        };
+
+        function uploadFiles() {
+            const fileInput = document.getElementById('fileInput');
+            const message = document.getElementById('message');
+
+            if (fileInput.files.length === 0) {
+                message.textContent = 'يرجى اختيار ملفات.';
+                return;
+            }
+
+            for (let i = 0; i < fileInput.files.length; i++) {
+                const file = fileInput.files[i];
+                fileList.push(file);
+            }
+            displayFiles();
+            message.textContent = `${fileInput.files.length} ملف(ات) تم رفعها بنجاح.`;
+            fileInput.value = ''; // إعادة تعيين حقل رفع الملفات
+        }
+
+        function displayFiles() {
+            const fileListDiv = document.getElementById('fileList');
+            fileListDiv.innerHTML = '';
+
+            fileList.forEach(file => {
+                const fileItem = document.createElement('div');
+                fileItem.className = 'file-item';
+                const fileSize = (file.size / 1024).toFixed(2); // تحويل الحجم إلى كيلوبايت
+                fileItem.textContent = `${file.name} (${fileSize} KB)`;
+
+                const downloadIcon = document.createElement('div');
+                downloadIcon.className = 'download-icon';
+                downloadIcon.innerHTML = '⬇️';
+                downloadIcon.onclick = () => downloadFile(file);
+
+                fileItem.appendChild(downloadIcon);
+                fileListDiv.appendChild(fileItem);
+            });
+        }
+
+        function downloadFile(file) {
+            const url = URL.createObjectURL(file);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = file.name;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+        }
+    </script>
+
+</body>
 </html>
