--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             right: 0;
             bottom: 0;
             background: url('https://picsum.photos/2200/2000?random=2') center/cover no-repeat;
-            opacity: 0.1;
+            opacity: 0.5; /* تعديل الشفافية لجعل الصورة أكثر وضوحًا */
             z-index: 0;
             transition: all 0.3s;
         }
