--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         :root {
             --bg-color: #eaeef2;
             --text-color: #444;
-            --card-bg: #ffffff;
-            --card-shadow: 20px 20px 60px #c5c9cc, -20px -20px 60px #ffffff;
+            --card-bg: rgba(255, 255, 255, 0.9);
+            --card-shadow: 20px 20px 60px rgba(197, 201, 204, 0.5), -20px -20px 60px rgba(255, 255, 255, 0.5);
             --header-bg: #2C3E50;
             --header-text: #ecf0f1;
             --nav-bg: #34495e;
@@ -36,11 +36,14 @@
         header {
             background-color: var(--header-bg);
             color: var(--header-text);
-            padding: 60px 0; /* زيادة المساحة */
+            padding: 60px 0;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             position: relative;
             overflow: hidden;
+            background-image: url('https://picsum.photos/3000/2050?random=1');
+            background-size: cover;
+            background-position: center;
         }
 
         header::before {
@@ -50,49 +53,48 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('https://picsum.photos/2200/2000?random=1') center/cover no-repeat;
-            opacity: 0.3.5;
-            z-index: 0;
+            background: rgba(44, 62, 80, 0.7);
+            z-index: 1;
         }
 
         header h1, header p {
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
 
         header h1 {
-            font-size: 3.2em; /* زيادة حجم الخط */
+            font-size: 3.2em;
             margin: 0;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
         header p {
-            font-size: 1.5em; /* زيادة حجم الخط */
+            font-size: 1.5em;
             margin-top: 10px;
         }
 
         nav {
             background: var(--nav-bg);
-            padding: 5px; /* تقليل المساحة */
+            padding: 5px;
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
             position: sticky;
             top: 0;
             z-index: 1000;
-            text-align: center; /* إضافة هذه الخاصية */
+            text-align: center;
         }
 
         nav a {
             color: var(--nav-text);
-            margin: 0 5px; /* تقليل المسافة بين الروابط */
+            margin: 0 5px;
             text-decoration: none;
-            padding: 5px 15px; /* تقليل padding */
+            padding: 5px 15px;
             border-radius: 25px;
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
-            font-size: 0.9em; /* تقليل حجم الخط */
+            font-size: 0.9em;
         }
 
         nav a::before {
@@ -130,6 +132,8 @@
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
+            opacity: 0;
+            transform: translateY(50px);
         }
 
         section::before {
@@ -139,35 +143,39 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('https://picsum.photos/2200/2000?random=2') center/cover no-repeat;
-            opacity: 0.1;
-            z-index: 0;
-            transition: all 0.3s;
+            background-size: cover;
+            background-position: center;
+            filter: blur(5px);
+            opacity: 0.2;
+            z-index: -1;
+            transition: all 0.3s ease;
         }
 
         section:hover::before {
-            transform: scale(1.1);
+            filter: blur(0);
+            opacity: 0.4;
         }
 
-        section h2, section p, section ul {
-            position: relative;
-            z-index: 1;
-        }
-
-        section:hover {
-            transform: translateY(-5px);
-            box-shadow: var(--card-shadow), 0 8px 30px rgba(0, 0, 0, 0.2);
-        }
+        #sections::before { background-image: url('https://picsum.photos/3000/2050?random=2'); }
+        #research::before { background-image: url('https://picsum.photos/3000/2050?random=3'); }
+        #health::before { background-image: url('https://picsum.photos/3000/2050?random=4'); }
+        #medication::before { background-image: url('https://picsum.photos/3000/2050?random=5'); }
+        #education::before { background-image: url('https://picsum.photos/3000/2050?random=6'); }
+        #medical-libraries::before { background-image: url('https://picsum.photos/3000/2050?random=7'); }
 
         section h2 {
             color: var(--accent-color);
             margin-bottom: 15px;
             font-size: 2em;
+            opacity: 0;
+            transform: translateY(20px);
         }
 
-        section p {
+        section p, section ul {
             font-size: 1em;
             line-height: 1.5;
+            opacity: 0;
+            transform: translateY(20px);
         }
 
         footer {
@@ -178,41 +186,13 @@
             width: 100%;
         }
 
-        .cta-button {
-            display: inline-block;
-            background: var(--cta-color);
-            color: white;
-            padding: 12px 24px;
-            text-decoration: none;
-            border-radius: 25px;
-            transition: all 0.3s;
-            margin-top: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .cta-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: rgba(255,255,255,0.2);
-            transition: all 0.3s;
-        }
-
-        .cta-button:hover::before {
-            left: 100%;
-        }
-
         @media (max-width: 768px) {
             nav {
                 flex-direction: column;
             }
 
             nav a {
-                margin: 5px 0; /* تقليل المسافة بين الروابط في الأجهزة الصغيرة */
+                margin: 5px 0;
             }
 
             section {
@@ -220,11 +200,11 @@
             }
 
             header h1 {
-                font-size: 2.5em; /* تقليل حجم الخط في الأجهزة الصغيرة */
+                font-size: 2.5em;
             }
 
             header p {
-                font-size: 1.2em; /* تقليل حجم الخط في الأجهزة الصغيرة */
+                font-size: 1.2em;
             }
         }
     </style>
@@ -318,17 +298,36 @@
     });
 
     gsap.utils.toArray('section').forEach((section, i) => {
-        gsap.from(section, {
-            opacity: 0,
-            y: 50,
-            duration: 1,
-            ease: 'power3.out',
+        const tl = gsap.timeline({
             scrollTrigger: {
                 trigger: section,
                 start: 'top 80%',
                 end: 'top 20%',
                 toggleActions: 'play none none reverse'
             }
+        });
+
+        tl.to(section, {
+            opacity: 1,
+            y: 0,
+            duration: 0.8,
+            ease: 'power3.out'
+        });
+
+        tl.to(section.querySelector('h2'), {
+            opacity: 1,
+            y: 0,
+            duration: 0.5,
+            ease: 'power2.out'
+        }, '-=0.4');
+
+        gsap.utils.toArray(section.querySelectorAll('p, ul')).forEach((element, index) => {
+            tl.to(element, {
+                opacity: 1,
+                y: 0,
+                duration: 0.5,
+                ease: 'power2.out'
+            }, '-=0.3');
         });
     });
 
@@ -361,7 +360,7 @@
             if (this.size > 0.2) this.size -= 0.1;
         }
         draw() {
-            ctx.fillStyle = 'rgba(255,255,255,0.8)';
+            ctx.fillStyle = 'rgba(26, 188, 156, 0.8)';
             ctx.beginPath();
             ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
             ctx.fill();
@@ -403,4 +402,4 @@
 </script>
 
 </body>
-</html>
+    </html>
