--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 </header>
 
 <nav>
-    <a href="#home">Home</a>
+    <a href="#home" id="home-link">Home</a>
     <a href="#sections">Sections</a>
     <a href="#research">Research</a>
     <a href="#health">Public Health</a>
@@ -344,6 +344,15 @@
                 top: targetElement.offsetTop - navHeight,
                 behavior: 'smooth'
             });
+        });
+    });
+
+    // Add functionality for the Home link
+    document.getElementById('home-link').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.scrollTo({
+            top: 0,
+            behavior: 'smooth'
         });
     });
 
